--- a/scripts/style.css
+++ b/scripts/style.css
@@ -335,3 +335,23 @@ a:active {
 .jumppage:hover {
     background-color: rgb(15, 15, 15);
 }
+
+#overlay{
+  position:fixed;
+  z-index:99999;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background:rgba(0,0,0,1);
+  transition: 1s 0.1s;
+}
+
+#progstat{
+  position:absolute;
+  top:50%;
+  margin-top:-40px;
+  width:100%;
+  text-align:center;
+  color:#fff;
+}
