--- a/scripts/style.portable.css
+++ b/scripts/style.portable.css
@@ -119,7 +119,8 @@ a:active {
                 font-size: 45px;
         font-size: 4vw;
         
-        min-width: 300px;
+        min-width: 225px;
+                max-width: 250px;
         margin: 20px;
         display: inline-block;
         padding: 8px;
