--- a/scripts/style.css
+++ b/scripts/style.css
@@ -252,7 +252,7 @@ a:active {
         height: 100%;
         width: 110%;
         text-align: center;
-        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../data/images/wall.jpg);
+        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../data/images/wall.jpg);
         background-size: cover;
         filter: blur(4px) brightness(0.85);
         -webkit-filter: blur(4px) brightness(0.85);
@@ -260,14 +260,14 @@ a:active {
         -ms-filter: blur(4px) brightness(0.85);
         -o-filter: blur(4px) brightness(0.85);
         position: absolute;
-        margin: -10px;
+        overflow: hidden;
 }
 
 .background2 {
         height: 100%;
         width: 110%;
         text-align: center;
-        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../data/images/wall2.jpg);
+        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../data/images/wall2.jpg);
         background-size: cover;
         filter: blur(4px) brightness(0.85);
         -webkit-filter: blur(4px) brightness(0.85);
@@ -275,14 +275,14 @@ a:active {
         -ms-filter: blur(4px) brightness(0.85);
         -o-filter: blur(4px) brightness(0.85);
         position: absolute;
-        margin: 10px -10px -10px;
+        overflow: hidden;
 }
 
 .background3 {
         height: 100%;
         width: 110%;
         text-align: center;
-        background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../data/images/wall3.jpg);
+        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../data/images/wall3.jpg);
         background-size: cover;
         filter: blur(4px) brightness(0.85);
         -webkit-filter: blur(4px) brightness(0.85);
@@ -290,7 +290,7 @@ a:active {
         -ms-filter: blur(4px) brightness(0.85);
         -o-filter: blur(4px) brightness(0.85);
         position: absolute;
-        margin: 10px -10px -10px;
+                overflow: hidden;
 }
 
 #footer {
@@ -329,7 +329,7 @@ a:active {
         left: 0;
         border-top: solid 1px;
         height: 50px;
-        background-color: #141414;
+        background-color: rgba(10, 10, 10, 0.5);
         margin-right: 18px;
         z-index: 2;
         line-height: 50px;
@@ -338,7 +338,7 @@ a:active {
 }
 
 #footerlink:hover {
-        background-color: #0a0a0a;
+        background-color: rgba(5, 5, 5, 0.75);
 }
 
 #headerlinktop {
@@ -354,7 +354,7 @@ a:active {
         right: 0;
         left: 0;
         height: 50px;
-        background-color: #141414;
+        background-color: rgba(10, 10, 10, 0.5);
         margin-right: 18px;
         z-index: 2;
         line-height: 50px;
@@ -363,7 +363,7 @@ a:active {
 }
 
 #headerlinktop:hover {
-        background-color: #0a0a0a;
+        background-color: rgba(5, 5, 5, 0.75);
 }
 
 #overlay {
@@ -384,4 +384,32 @@ a:active {
         width: 100%;
         text-align: center;
         color: #fff;
+}
+
+#mobilebanner {
+        -o-transition: color .1s ease-out,background .1s ease-in;
+        -ms-transition: color .1s ease-out,background .1s ease-in;
+        -moz-transition: color .1s ease-out,background .1s ease-in;
+        -webkit-transition: color .1s ease-out,background .1s ease-in;
+        transition: color .1s ease-out,background .1s ease-in;
+        width: 100%;
+        border-bottom: solid 1px;
+        border-color: rgba(30, 30, 30, 1);
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        height: 50px;
+        background-color: rgba(20, 20, 20, 1);
+        margin-right: 18px;
+        z-index: 2;
+        line-height: 50px;
+        cursor: pointer;
+        cursor: hand;
+}
+
+#mobilebanner:hover {
+        background-color: rgba(10, 10, 10, 0.75);
+                border-bottom: solid 1px;
+        border-color: rgba(15, 15, 15, 1);
 }
