--- a/scripts/style.css
+++ b/scripts/style.css
@@ -338,7 +338,7 @@ a:active {
 }
 
 #footerlink:hover {
-        background-color: rgba(5, 5, 5, 0.75);
+        background-color: rgba(30,30,30,0.5);
 }
 
 #headerlinktop {
@@ -363,7 +363,7 @@ a:active {
 }
 
 #headerlinktop:hover {
-        background-color: rgba(5, 5, 5, 0.75);
+        background-color: rgba(30,30,30,0.5);
 }
 
 #overlay {
@@ -393,14 +393,14 @@ a:active {
         -webkit-transition: color .1s ease-out,background .1s ease-in;
         transition: color .1s ease-out,background .1s ease-in;
         width: 100%;
-        border-bottom: solid 1px;
-        border-color: rgba(30, 30, 30, 1);
+                border-bottom: solid 1px;
+        border-color: rgba(15, 15, 15, 1);
         position: absolute;
         top: 0;
         right: 0;
         left: 0;
         height: 50px;
-        background-color: rgba(20, 20, 20, 1);
+        background-color: rgba(10, 10, 10, 0.5);
         margin-right: 18px;
         z-index: 2;
         line-height: 50px;
@@ -409,7 +409,7 @@ a:active {
 }
 
 #mobilebanner:hover {
-        background-color: rgba(10, 10, 10, 0.75);
+        background-color: rgba(30,30,30,0.5);
                 border-bottom: solid 1px;
         border-color: rgba(15, 15, 15, 1);
 }
