--- a/scripts/style.portable.css
+++ b/scripts/style.portable.css
@@ -136,3 +136,30 @@ a:active {
     background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../data/images/wall3.jpg);
     background-size: cover;
 }
+#mobilebanner {
+    -o-transition: color .1s ease-out, background .1s ease-in;
+    -ms-transition: color .1s ease-out, background .1s ease-in;
+    -moz-transition: color .1s ease-out, background .1s ease-in;
+    -webkit-transition: color .1s ease-out, background .1s ease-in;
+    transition: color .1s ease-out, background .1s ease-in;
+    width: 100%;
+    border-bottom: solid 1px;
+    border-color: rgba(15, 15, 15, 1);
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 35px;
+    height: 3.5vw;
+    background-color: rgba(30, 30, 30, 0.5);
+    z-index: 2;
+    line-height: 35px;
+    line-height: 3.5vw;
+    cursor: pointer;
+    cursor: hand;
+}
+#mobilebanner:hover {
+    background-color: rgba(50, 50, 50, 0.5);
+    border-bottom: solid 1px;
+    border-color: rgba(15, 15, 15, 1);
+}
