--- a/scripts/style.portable.css
+++ b/scripts/style.portable.css
@@ -94,9 +94,12 @@ a:active {
     margin-right: auto;
 }
 .child {
-    font-size: 45px;
-    font-size: 4vw;
-    max-width: 300px;
+    font-size: 4px;
+    font-size: 3.8vw;
+    min-width: 325px;
+    max-width: 325px;
+    min-height: 325px;
+    max-height: 325px;
     margin: 20px;
     display: inline-block;
     padding: 8px;
