--- a/scripts/style.css
+++ b/scripts/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
-src: url('../data/other/montserrat.woff2') format("woff2"),
-       url('../data/other/montserrat.woff') format('woff');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-family: 'Noto Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Noto Sans'), local('NotoSans'), url('notosans.woff2') format('woff2');
 }
+
+
 body,
 html {
     height: 100%;
