--- a/scripts/style.tock.css
+++ b/scripts/style.tock.css
@@ -31,10 +31,10 @@ html {
             }
             
             html {
-                  background-color: #000;
-    -webkit-filter: grayscale(70%);
-    -moz-filter: grayscale(70%);
-    filter: grayscale(70%);
+                  background-color: rgb(3, 3 ,3);
+    -webkit-filter: grayscale(55%);
+    -moz-filter: grayscale(55%);
+    filter: grayscale(55%);
             }
             
 
@@ -73,9 +73,10 @@ width: 100%;
                   width: 100%;
                   max-width: 700px;
                   max-height: 500px;
-                      filter: blur(3px) ;
-    -webkit-filter: blur(3px);
-    -moz-filter: blur(3px);
-    -ms-filter: blur(3px) ;
-    -o-filter: blur(3px);
+                      filter: blur(2px) ;
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -ms-filter: blur(2px) ;
+    -o-filter: blur(2px);
+    border-radius: 15%;
             }
